// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Git Sync - repo tab rendering landing list view 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-large"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-left-xlarge StyledProps--margin-bottom-small Button--with-current-color"
      id="newRepoBtn"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
        icon="plus"
      >
        <svg
          data-icon="plus"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            plus
          </desc>
          <path
            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        addRepository
      </span>
    </button>
    <div
      class="table table"
    >
      <div
        class="header"
        role="row"
      >
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 15%;"
        >
          NAME
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 20%;"
        >
          GITSYNC.REPOSITORYPATH
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 15%;"
        >
          PRIMARYBRANCH
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 50%;"
        >
          GITSYNC.ROOTFOLDERLISTHEADER
        </div>
      </div>
      <div
        class="row card"
        role="row"
      >
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="github"
            >
              <svg
                height="30"
                viewBox="0 0 24 24"
                width="30"
              >
                <path
                  d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
                />
              </svg>
            </span>
            <div
              class="wrapper"
            >
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-black"
                title="gitSyncRepoTest"
              >
                gitSyncRepoTest
              </p>
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-grey400"
                title="606312ffef03c30721080b85"
              >
                606312ffef03c30721080b85
              </p>
            </div>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              wings-software/triggerNgDemo
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              master
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 50%;"
        >
          <div
            class="wrapper"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    src1
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://github.com/wings-software/triggerNgDemo/src1/.harness/
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-xsmall StyledProps--background-purple100"
                  >
                    gitsync.defaultFolder
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    src2
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://github.com/wings-software/triggerNgDemo/src2/.harness/
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addFolderBtn StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  gitsync.addFolder
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row card"
        role="row"
      >
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="github"
            >
              <svg
                height="30"
                viewBox="0 0 24 24"
                width="30"
              >
                <path
                  d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
                />
              </svg>
            </span>
            <div
              class="wrapper"
            >
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-black"
                title="gitSyncRepo"
              >
                gitSyncRepo
              </p>
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-grey400"
                title="6062f6e4ef03c30721080b81"
              >
                6062f6e4ef03c30721080b81
              </p>
            </div>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              feature
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 50%;"
        >
          <div
            class="wrapper"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    rootFolder1
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://www.github.com/testRepo.git/rootFolder1/.harness/
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-xsmall StyledProps--background-purple100"
                  >
                    gitsync.defaultFolder
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    rootFolderTest
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://www.github.com/testRepo.git/rootFolderTest/.harness/
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addFolderBtn StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  gitsync.addFolder
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Git Sync - repo tab test for adding new root folder 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-large"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-left-xlarge StyledProps--margin-bottom-small Button--with-current-color"
      id="newRepoBtn"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
        icon="plus"
      >
        <svg
          data-icon="plus"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            plus
          </desc>
          <path
            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        addRepository
      </span>
    </button>
    <div
      class="table table"
    >
      <div
        class="header"
        role="row"
      >
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 15%;"
        >
          NAME
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 20%;"
        >
          GITSYNC.REPOSITORYPATH
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 15%;"
        >
          PRIMARYBRANCH
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 50%;"
        >
          GITSYNC.ROOTFOLDERLISTHEADER
        </div>
      </div>
      <div
        class="row card"
        role="row"
      >
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="github"
            >
              <svg
                height="30"
                viewBox="0 0 24 24"
                width="30"
              >
                <path
                  d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
                />
              </svg>
            </span>
            <div
              class="wrapper"
            >
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-black"
                title="gitSyncRepoTest"
              >
                gitSyncRepoTest
              </p>
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-grey400"
                title="606312ffef03c30721080b85"
              >
                606312ffef03c30721080b85
              </p>
            </div>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              wings-software/triggerNgDemo
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              master
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 50%;"
        >
          <div
            class="wrapper"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    src1
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://github.com/wings-software/triggerNgDemo/src1/.harness/
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-xsmall StyledProps--background-purple100"
                  >
                    gitsync.defaultFolder
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    src2
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://github.com/wings-software/triggerNgDemo/src2/.harness/
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--padding-medium"
              >
                <div
                  class="OverlaySpinner--overlaySpinner"
                >
                  <form
                    class="FormikForm--main"
                  >
                    <div>
                      <div
                        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                      >
                        <div
                          class="bp3-form-group"
                          data-id="rootFolder-0"
                        >
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="rootFolder"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-form-group"
                          data-id="isDefault-1"
                        >
                          <div
                            class="bp3-form-content"
                          >
                            <label
                              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--margin-left-huge StyledProps--margin-top-small StyledProps--font-size-normal StyledProps--inline"
                            >
                              <input
                                name="isDefault"
                                type="checkbox"
                              />
                              <span
                                class="bp3-control-indicator"
                              />
                              gitsync.markAsDefault
                            </label>
                          </div>
                        </div>
                      </div>
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-right-large Button--with-current-color"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          save
                        </span>
                      </button>
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-danger Button--with-current-color"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          cancel
                        </span>
                      </button>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row card"
        role="row"
      >
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="github"
            >
              <svg
                height="30"
                viewBox="0 0 24 24"
                width="30"
              >
                <path
                  d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
                />
              </svg>
            </span>
            <div
              class="wrapper"
            >
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-black"
                title="gitSyncRepo"
              >
                gitSyncRepo
              </p>
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-grey400"
                title="6062f6e4ef03c30721080b81"
              >
                6062f6e4ef03c30721080b81
              </p>
            </div>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              feature
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 50%;"
        >
          <div
            class="wrapper"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    rootFolder1
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://www.github.com/testRepo.git/rootFolder1/.harness/
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-xsmall StyledProps--background-purple100"
                  >
                    gitsync.defaultFolder
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    rootFolderTest
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://www.github.com/testRepo.git/rootFolderTest/.harness/
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addFolderBtn StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  gitsync.addFolder
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Git Sync - repo tab test for making a rootfolder default from leftmenu 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-large"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-left-xlarge StyledProps--margin-bottom-small Button--with-current-color"
      id="newRepoBtn"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
        icon="plus"
      >
        <svg
          data-icon="plus"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            plus
          </desc>
          <path
            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        addRepository
      </span>
    </button>
    <div
      class="table table"
    >
      <div
        class="header"
        role="row"
      >
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 15%;"
        >
          NAME
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 20%;"
        >
          GITSYNC.REPOSITORYPATH
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 15%;"
        >
          PRIMARYBRANCH
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 50%;"
        >
          GITSYNC.ROOTFOLDERLISTHEADER
        </div>
      </div>
      <div
        class="row card"
        role="row"
      >
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="github"
            >
              <svg
                height="30"
                viewBox="0 0 24 24"
                width="30"
              >
                <path
                  d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
                />
              </svg>
            </span>
            <div
              class="wrapper"
            >
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-black"
                title="gitSyncRepoTest"
              >
                gitSyncRepoTest
              </p>
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-grey400"
                title="606312ffef03c30721080b85"
              >
                606312ffef03c30721080b85
              </p>
            </div>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              wings-software/triggerNgDemo
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              master
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 50%;"
        >
          <div
            class="wrapper"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    src1
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://github.com/wings-software/triggerNgDemo/src1/.harness/
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target bp3-popover-open"
                    >
                      <button
                        class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <div
                          class="bp3-spinner bp3-button-spinner"
                        >
                          <div
                            class="bp3-spinner-animation"
                          >
                            <svg
                              height="20"
                              stroke-width="16.00"
                              viewBox="-3.00 -3.00 106.00 106.00"
                              width="20"
                            >
                              <path
                                class="bp3-spinner-track"
                                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                              />
                              <path
                                class="bp3-spinner-head"
                                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                                pathLength="280"
                                stroke-dasharray="280 280"
                                stroke-dashoffset="210"
                              />
                            </svg>
                          </div>
                        </div>
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    src2
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://github.com/wings-software/triggerNgDemo/src2/.harness/
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addFolderBtn StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  gitsync.addFolder
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row card"
        role="row"
      >
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="github"
            >
              <svg
                height="30"
                viewBox="0 0 24 24"
                width="30"
              >
                <path
                  d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
                />
              </svg>
            </span>
            <div
              class="wrapper"
            >
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-black"
                title="gitSyncRepo"
              >
                gitSyncRepo
              </p>
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-grey400"
                title="6062f6e4ef03c30721080b81"
              >
                6062f6e4ef03c30721080b81
              </p>
            </div>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              feature
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 50%;"
        >
          <div
            class="wrapper"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    rootFolder1
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://www.github.com/testRepo.git/rootFolder1/.harness/
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-xsmall StyledProps--background-purple100"
                  >
                    gitsync.defaultFolder
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    rootFolderTest
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://www.github.com/testRepo.git/rootFolderTest/.harness/
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addFolderBtn StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  gitsync.addFolder
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Git Sync - repo tab test for opening add repo modal in list view 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-large"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-left-xlarge StyledProps--margin-bottom-small Button--with-current-color"
      id="newRepoBtn"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
        icon="plus"
      >
        <svg
          data-icon="plus"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            plus
          </desc>
          <path
            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        addRepository
      </span>
    </button>
    <div
      class="table table"
    >
      <div
        class="header"
        role="row"
      >
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 15%;"
        >
          NAME
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 20%;"
        >
          GITSYNC.REPOSITORYPATH
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 15%;"
        >
          PRIMARYBRANCH
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 50%;"
        >
          GITSYNC.ROOTFOLDERLISTHEADER
        </div>
      </div>
      <div
        class="row card"
        role="row"
      >
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="github"
            >
              <svg
                height="30"
                viewBox="0 0 24 24"
                width="30"
              >
                <path
                  d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
                />
              </svg>
            </span>
            <div
              class="wrapper"
            >
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-black"
                title="gitSyncRepoTest"
              >
                gitSyncRepoTest
              </p>
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-grey400"
                title="606312ffef03c30721080b85"
              >
                606312ffef03c30721080b85
              </p>
            </div>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              wings-software/triggerNgDemo
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              master
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 50%;"
        >
          <div
            class="wrapper"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    src1
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://github.com/wings-software/triggerNgDemo/src1/.harness/
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-xsmall StyledProps--background-purple100"
                  >
                    gitsync.defaultFolder
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    src2
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://github.com/wings-software/triggerNgDemo/src2/.harness/
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addFolderBtn StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  gitsync.addFolder
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row card"
        role="row"
      >
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="github"
            >
              <svg
                height="30"
                viewBox="0 0 24 24"
                width="30"
              >
                <path
                  d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
                />
              </svg>
            </span>
            <div
              class="wrapper"
            >
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-black"
                title="gitSyncRepo"
              >
                gitSyncRepo
              </p>
              <p
                class="StyledProps--font StyledProps--main name StyledProps--color StyledProps--color-grey400"
                title="6062f6e4ef03c30721080b81"
              >
                6062f6e4ef03c30721080b81
              </p>
            </div>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 15%;"
        >
          <div
            class="wrapper"
          >
            <p
              class="StyledProps--font StyledProps--main name"
            >
              feature
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 50%;"
        >
          <div
            class="wrapper"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    rootFolder1
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://www.github.com/testRepo.git/rootFolder1/.harness/
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-xsmall StyledProps--background-purple100"
                  >
                    gitsync.defaultFolder
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main rootFoldersContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main rootFoldersData"
                >
                  <p
                    class="StyledProps--font StyledProps--main rootFolderRelativePath"
                  >
                    rootFolderTest
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    https://www.github.com/testRepo.git/rootFolderTest/.harness/
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Options"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 4 16"
                            width="16"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addFolderBtn StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  gitsync.addFolder
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
